# pyselfi

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  description.rst  index.rst  reference.rst
doc/source/_static/: custom.css
doc/source/api/: blackboxes_api.rst  inference_api.rst  infrastructure_api.rst  likelihood.rst  pool.rst  posterior.rst  selfi.rst  utils.rst
doc/source/examples/: lotkavolterra_inference.rst  power_spectrum_inference.rst
doc/source/gettingstarted/: basic_usage.rst  examples.rst  installation.rst  power_spectrum_inference.rst
doc/source/usage/: new_blackbox.rst  new_model.rst
examples/grf/: selfi_GRF.ipynb
examples/grf/model/: blackbox_GRF.py  setup_GRF.py
examples/grf/sims/: .gitignore
examples/simbelmyne/: selfi_SBMY.ipynb
examples/simbelmyne/model/: blackbox_SBMY.py  setup_SBMY.py
examples/simbelmyne/sims/: .gitignore  RngStateLPT.rng  RngStateMocks.rng  groundtruth.npz  phi_obs_survey_cosmo0.npy  phi_obs_survey_cosmo1.npy
pyselfi/: __init__.py  likelihood.py  pool.py  posterior.py  selfi.py  utils.py
pyselfi/power_spectrum/: __init__.py  prior.py  selfi.py
pyselfi_examples/: __init__.py
pyselfi_examples/grf/: selfi_GRF.ipynb
pyselfi_examples/grf/model/: __init__.py  (+2 more)
pyselfi_examples/simbelmyne/: selfi_SBMY.ipynb
pyselfi_examples/templates/: new_blackbox.py  new_prior.py  new_selfi.py
src/pyselfi/: __init__.py  likelihood.py  pool.py  posterior.py  selfi.py  utils.py
src/pyselfi_examples/: __init__.py
tools/: bump_version.py
(+262 files in other folders)
